# plasky_2023a

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
asimov_manager/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: asimov_interface.py  context_processors.py  forms.py  models.py  urls.py  views.py
frontend/migrations/: 0001_initial.py  0002_auto_20231024_0051.py
frontend/static/css/: main.css
frontend/templates/: add-subject.html  base.html  view-subject.html
frontend/templates/parts/: add-subject-form.html  subject-list.html
