[tool.poetry]
name = "asimov_manager"
version = "0.1.0"
description = "Asimov Pipeline Manager"
authors = ["Lewis Lakerink <llakerink@swin.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
Django = "^4.2.5"
asimov = ">=0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
