[tool.poetry]
name = "asimov_manager"
version = "0.1.0"
description = "Asimov Pipeline Manager"
authors = ["Lewis Lakerink <llakerink@swin.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Django = "=3.2"
ligo-gracedb = "^2.12.0"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
